--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZKNXL6VYE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3ZKNXL6VYE');
+</script>
   </head>
 
   <body bgcolor="#dcdcdc">
