--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZKNXL6VYE"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JK22GGPPFP"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
-    gtag('config', 'G-3ZKNXL6VYE');
+    gtag('config', 'G-JK22GGPPFP');
     </script>
   </head>
 
