--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JK22GGPPFP"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VY3X3ZHFES"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-JK22GGPPFP');
+
+    gtag('config', 'G-VY3X3ZHFES');
     </script>
   </head>
 
